--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta property="og:title" content="✨ Happy Diwali & New Year 2025 ✨">
-<meta property="og:description" content="Wishing you a bright Diwali & prosperous New Year filled with light, love, and happiness! 🎆">
-<meta property="og:image" content="https://i.imgur.com/VlPYxWv.jpg">
+<meta property="og:title" content="🎇 Happy Diwali & New Year 2025 🎆">
+<meta property="og:description" content="Wishing you a bright Diwali and a joyful New Year filled with happiness, success, and peace! 🌟">
+<meta property="og:image" content="https://i.imgur.com/ZwM0u4v.jpg">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://yourname.netlify.app">
 
@@ -15,24 +15,34 @@
   body {
     margin: 0;
     overflow: hidden;
-    background: radial-gradient(circle at center, #ffcc00, #ff6600);
+    background: radial-gradient(circle at center, #ff9933, #6600cc);
     font-family: 'Poppins', sans-serif;
     text-align: center;
     color: #fff;
   }
   h1 {
-    font-size: 2.8em;
-    margin-top: 20vh;
-    text-shadow: 0 0 20px #ffeb3b;
+    font-size: 2.6em;
+    margin-top: 18vh;
+    text-shadow: 0 0 25px #ffeb3b;
     animation: glow 2s infinite alternate;
+  }
+  h2 {
+    font-size: 2em;
+    color: #ffe57f;
+    text-shadow: 0 0 15px #fff;
+    animation: fade 3s infinite alternate;
   }
   @keyframes glow {
     from { text-shadow: 0 0 10px #ffeb3b; }
     to { text-shadow: 0 0 30px #fff, 0 0 60px #ffeb3b; }
   }
+  @keyframes fade {
+    from { opacity: 0.7; }
+    to { opacity: 1; }
+  }
   p {
-    font-size: 1.4em;
-    margin: 10px auto;
+    font-size: 1.3em;
+    margin: 15px auto;
     max-width: 90%;
   }
   canvas {
@@ -44,31 +54,45 @@
   button {
     background: #fff;
     color: #ff6600;
-    font-size: 1.2em;
+    font-size: 1.1em;
     border: none;
-    padding: 12px 30px;
+    padding: 10px 28px;
     border-radius: 30px;
     margin-top: 20px;
     cursor: pointer;
     transition: 0.3s;
   }
   button:hover { background: #ffeb3b; }
+
+  footer {
+    position: fixed;
+    bottom: 10px;
+    width: 100%;
+    font-size: 0.9em;
+    color: #fff;
+    opacity: 0.8;
+  }
 </style>
 </head>
 
 <body>
 <canvas id="fireworks"></canvas>
-<h1>✨ Happy Diwali & New Year 2025 ✨</h1>
-<p>May your life sparkle with love, light, and laughter! 🎇</p>
-<button onclick="playSound()">🔊 Play Celebration</button>
+<h1>🪔 Happy Diwali 🪔</h1>
+<h2>🎉 & Happy New Year 2025 🎆</h2>
+<p>May your year shine bright with joy, health, success, and endless light! 🌟</p>
+<button onclick="playMusic()">🔊 Play Celebration</button>
 
-<audio id="sound" src="https://www.fesliyanstudios.com/play-mp3/387"></audio>
+<audio id="music" src="https://www.fesliyanstudios.com/play-mp3/6673"></audio>
+
+<footer>Made with ❤️ for Friends & Family</footer>
 
 <script>
-  const sound = document.getElementById('sound');
-  function playSound() { sound.play(); }
+  const music = document.getElementById('music');
+  function playMusic() {
+    music.play();
+  }
 
-  // Fireworks animation
+  // Fireworks
   const canvas = document.getElementById('fireworks');
   const ctx = canvas.getContext('2d');
   resizeCanvas();
@@ -81,11 +105,11 @@
 
   const particles = [];
   function createFirework(x, y, color) {
-    for (let i = 0; i < 50; i++) {
+    for (let i = 0; i < 60; i++) {
       particles.push({
         x, y,
         angle: Math.random() * 2 * Math.PI,
-        speed: Math.random() * 5 + 2,
+        speed: Math.random() * 6 + 2,
         alpha: 1,
         color,
       });
@@ -93,14 +117,14 @@
   }
 
   function loop() {
-    ctx.fillStyle = 'rgba(0,0,0,0.1)';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    for (let i = particles.length-1; i>=0; i--) {
+    ctx.fillStyle = 'rgba(0, 0, 0, 0.15)';
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+    for (let i = particles.length - 1; i >= 0; i--) {
       const p = particles[i];
       p.x += Math.cos(p.angle) * p.speed;
       p.y += Math.sin(p.angle) * p.speed;
-      p.alpha -= 0.015;
-      if (p.alpha <= 0) particles.splice(i,1);
+      p.alpha -= 0.012;
+      if (p.alpha <= 0) particles.splice(i, 1);
       else {
         ctx.globalAlpha = p.alpha;
         ctx.fillStyle = p.color;
@@ -115,8 +139,8 @@
   loop();
 
   setInterval(() => {
-    createFirework(Math.random()*canvas.width, Math.random()*canvas.height/2, `hsl(${Math.random()*360},100%,50%)`);
-  }, 600);
+    createFirework(Math.random() * canvas.width, Math.random() * canvas.height / 1.5, `hsl(${Math.random() * 360},100%,50%)`);
+  }, 700);
 </script>
 </body>
 </html>
