--- a/index.html
+++ b/index.html
@@ -1,92 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Diwali 2025</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <style>
-    * {margin:0; padding:0; box-sizing:border-box; font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
-    body {
-      background: linear-gradient(135deg, #0c0032, #190061, #240090);
-      color:white; min-height:100vh;
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-      padding:20px; text-align:center;
-    }
-    .container {
-      max-width:800px; width:100%;
-      background:rgba(255,255,255,0.1); border-radius:20px;
-      padding:30px; box-shadow:0 10px 30px rgba(0,0,0,0.5);
-      backdrop-filter:blur(10px);
-      border:1px solid rgba(255,255,255,0.2);
-    }
-    h1 {font-size:2.5rem; color:#ffcc00; text-shadow:0 0 15px rgba(255,204,0,0.7);}
-    .message {font-size:1.6rem; margin:20px 0; color:#fff;}
-    .sender {font-size:1.3rem; font-weight:bold; color:#ffcc00;}
-    input {
-      width:100%; max-width:400px;
-      padding:12px 20px; border:none; border-radius:50px;
-      background:rgba(255,255,255,0.9); font-size:1.1rem; text-align:center;
-      margin:20px 0;
-    }
-    .btn {
-      background:linear-gradient(to right,#25D366,#128C7E);
-      color:white; border:none; padding:14px 30px;
-      border-radius:50px; font-size:1.1rem; font-weight:bold;
-      cursor:pointer; transition:0.3s; margin-top:10px;
-    }
-    .btn:hover {transform:scale(1.05);}
-    .diya {
-      width:60px; height:30px; background:#ff6600; border-radius:50% 50% 40% 40%;
-      position:relative; margin:20px auto; box-shadow:0 0 15px #ff9933;
-    }
-    .diya::before {
-      content:''; position:absolute; top:-15px; left:50%; transform:translateX(-50%);
-      width:12px; height:20px; background:#ffcc00; border-radius:50% 50% 20% 20%;
-      box-shadow:0 0 20px #ffcc00; animation:flicker 1s infinite alternate;
-    }
-    @keyframes flicker {
-      0%{opacity:0.8; transform:translateX(-50%) scale(1);}
-      100%{opacity:1; transform:translateX(-50%) scale(1.1);}
-    }
-    footer {margin-top:30px; font-size:0.9rem; color:rgba(255,255,255,0.7);}
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Happy Diwali & New Year 2025</title>
+<style>
+  body {
+    background: radial-gradient(circle, #1b1b1b, #000);
+    color: gold;
+    font-family: 'Segoe UI', sans-serif;
+    text-align: center;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+  }
+  h1 {
+    font-size: 2.2em;
+    margin-top: 60px;
+    text-shadow: 0 0 15px #ffcc00;
+  }
+  p {
+    font-size: 1.1em;
+    color: #fff;
+  }
+  .share-btn {
+    background: linear-gradient(45deg, #25D366, #128C7E);
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    margin-top: 25px;
+    border-radius: 30px;
+    font-size: 1.1em;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  .share-btn:hover {
+    transform: scale(1.1);
+    box-shadow: 0 0 20px #25D366;
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>🪔 Happy Diwali 2025 🪔</h1>
-    <div class="message">🎇 Happy Diwali!</div>
-    <div class="diya"></div>
-    <p class="sender" id="senderDisplay">From: PARIMAL HODAR</p>
-    <input type="text" id="senderName" placeholder="Enter Your Name" oninput="updateSender()">
-    <button class="btn" onclick="shareOnWhatsApp()">
-      <i class="fab fa-whatsapp"></i> Share on WhatsApp
-    </button>
-  </div>
 
-  <footer>Made with ❤️ by Parimal Hodar</footer>
+  <h1>🎇 Happy Diwali & New Year 2025! 🎆</h1>
+  <p>Wishing you a bright Diwali and a joyful New Year filled with happiness, success, and peace! 🌟</p>
+  <p><strong>- From: Parimal Hodar</strong></p>
+
+  <button class="share-btn" onclick="shareOnWhatsApp()">🎉 Share on WhatsApp</button>
 
   <script>
-    const baseURL = "https://parimalhodar.github.io/HappyNewYear/";
-
-    function slugify(text) {
-      return text.toLowerCase().replace(/\s+/g, '-').replace(/[^a-z0-9\-]/g, '');
-    }
-
-    function updateSender() {
-      const name = document.getElementById('senderName').value.trim();
-      document.getElementById('senderDisplay').textContent =
-        name ? `From: ${name}` : 'From: PARIMAL HODAR';
-    }
-
     function shareOnWhatsApp() {
-      const name = document.getElementById('senderName').value.trim() || 'PARIMAL HODAR';
-      const slugName = slugify(name);
-      const fullURL = `${baseURL}${slugName}`;
-      const message = `🎇 Happy Diwali%0A${fullURL}`;
-      const whatsappUrl = `https://api.whatsapp.com/send?text=${message}`;
-      window.open(whatsappUrl, '_blank');
+      const senderName = "Parimal Hodar";
+      const message = 
+`🎇 Happy Diwali & New Year 2025! 🎆
+Wishing you a bright Diwali and a joyful New Year filled with happiness, success, and peace! 🌟
+From: ${senderName}
+https://parimalhodar.github.io/HappyNewYear/parimal-hodar`;
+
+      const encodedMessage = encodeURIComponent(message);
+      const url = `https://wa.me/?text=${encodedMessage}`;
+      window.open(url, '_blank');
     }
   </script>
+
 </body>
 </html>
