--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Happy Diwali & New Year 2025</title>
+<title>🎇 Happy Diwali</title>
 <style>
   body {
     background: radial-gradient(circle, #1b1b1b, #000);
@@ -42,21 +42,16 @@
 </head>
 <body>
 
-  <h1>🎇 Happy Diwali & New Year 2025! 🎆</h1>
-  <p>Wishing you a bright Diwali and a joyful New Year filled with happiness, success, and peace! 🌟</p>
-  <p><strong>- From: Parimal Hodar</strong></p>
+  <h1>🎇 Happy Diwali</h1>
+  <p><strong>- From: Sagar</strong></p>
 
   <button class="share-btn" onclick="shareOnWhatsApp()">🎉 Share on WhatsApp</button>
 
   <script>
     function shareOnWhatsApp() {
-      const senderName = "Parimal Hodar";
-      const message = 
-`🎇 Happy Diwali & New Year 2025! 🎆
-Wishing you a bright Diwali and a joyful New Year filled with happiness, success, and peace! 🌟
-From: ${senderName}
-https://parimalhodar.github.io/HappyNewYear/parimal-hodar`;
-
+      const senderName = "sagar";
+      const link = "https://parimalhodar.github.io/HappyNewYear/sagar";
+      const message = `🎇 Happy Diwali\nFrom: ${senderName}\n${link}`;
       const encodedMessage = encodeURIComponent(message);
       const url = `https://wa.me/?text=${encodedMessage}`;
       window.open(url, '_blank');
